✨ Feat: 로그인 시 닉네임도 반환하도록 변경